force-app/zurich-base/main/default/objects/Campaign/Campaign.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>