force-app/zurich-base/main/default/objects/Campaign/fields/Available_countries__c.field-meta.xml
<CustomField>
    <fullName>Available_countries__c</fullName>
    <label>Avalable countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AvailableCountries</valueSetName>
    </valueSet>
</CustomField>