force-app/zurich-base/main/default/objects/Campaign/fields/BusinessCode__c.field-meta.xml
<CustomField>
    <fullName>BusinessCode__c</fullName>
    <description>Código de Negocio</description>
    <label>Business Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>