force-app/zurich-base/main/default/objects/Campaign/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Código de Campaña</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>