force-app/zurich-base/main/default/objects/Campaign/fields/LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>LegalEntity__c</fullName>
    <label>Entidad legal</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LegalEntity</valueSetName>
    </valueSet>
</CustomField>