force-app/zurich-base/main/default/objects/Campaign/fields/MaxCallRetries__c.field-meta.xml
<CustomField>
    <fullName>MaxCallRetries__c</fullName>
    <label>Maximum number of retries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>