force-app/zurich-base/main/default/objects/Campaign/fields/PictureURL__c.field-meta.xml
<CustomField>
    <fullName>PictureURL__c</fullName>
    <label>Imagen campaña</label>
    <type>Url</type>
</CustomField>