force-app/zurich-base/main/default/objects/Campaign/fields/ProductBranch__c.field-meta.xml
<CustomField>
    <fullName>ProductBranch__c</fullName>
    <description>Ramo correspondiente al producto asociado a la campaña.</description>
    <label>Product Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductBranches</valueSetName>
    </valueSet>
</CustomField>