force-app/zurich-base/main/default/objects/Campaign/recordTypes/Telemarketing.recordType-meta.xml
<RecordType>
    <fullName>Telemarketing</fullName>
    <active>true</active>
    <description>Zurich Empresas - Campañas de Telemarketing con Genesys</description>
    <label>Telemarketing</label>
</RecordType>