force-app/zurich-base/main/default/objects/Campaign/validationRules/RestringirEdicionRegistro.validationRule-meta.xml
<ValidationRule>
    <fullName>RestringirEdicionRegistro</fullName>
    <active>true</active>
    <description>Los perfiles de ZE User y OCS User no pueden editar campañas</description>
    <errorConditionFormula>OR($Profile.Name = &apos;OCS User&apos;,$Profile.Name = &apos;ZE User&apos;)</errorConditionFormula>
    <errorMessage>[VR Campaña] La edición de este objeto no está permitida para tu perfil.</errorMessage>
</ValidationRule>